# CAE

./: .gitignore  CACHING_NOTES.md  Cargo.toml  LICENSE  License.md  README.md  WEB_README.md  index.html
.claude/: settings.local.json
Pozyx.CAE/: Pozyx.CAE.sln  TODO.txt  howto.txt
Pozyx.CAE/Pozyx.CAE.Lib/: BitArrayCellSpace.cs  BoolArrayCellSpace.cs  ICellSpace.cs  IRunner.cs  Pozyx.CAE.Lib.csproj  RuleTools.cs  RulesTools.cs  packages.config
Pozyx.CAE/Pozyx.CAE.Lib.AMP/: ApplyRuleOneStepGpu.cpp  ApplyRuleOneStepGpuPacked.cpp  ApplyRuleOneStepGpuPackedTiled.cpp  ApplyRuleOneStepGpuTiled.cpp  ApplyRuleOneStepGpuWithLimitedConcurrency.cpp  ApplyRuleOneStepSingleThreadCpu.cpp  ApplyRuleOneStepSingleThreadWithCpuPacked.cpp  ApplyRuleOneStepSingleThreadWithCpuPackedInt.cpp  Pozyx.CAE.Lib.AMP.cpp  Pozyx.CAE.Lib.AMP.vcxproj  Pozyx.CAE.Lib.AMP.vcxproj.filters  UninitializeAmp.cpp  common.cpp  common.h
Pozyx.CAE/Pozyx.CAE.Lib.Portable/: Pozyx.CAE.Lib.Portable.csproj  RuleTools.cs  project.json
Pozyx.CAE/Pozyx.CAE.Lib.Portable/CellSpaces/: ArrayCellSpace.cs  BitArrayCellSpace.cs  BoolArrayCellSpace.cs  CellSpaceTools.cs  ICellSpace.cs  IntArrayCellSpace.cs  PackedIntArrayCellSpace.cs  PaddedArrayCellSpace.cs  PaddedIntArrayCellSpace.cs  PaddedPackedIntArrayCellSpace.cs
Pozyx.CAE/Pozyx.CAE.Lib.Portable/Properties/: AssemblyInfo.cs
Pozyx.CAE/Pozyx.CAE.Lib.Portable/Runners/: FakeRunner.cs  IRunner.cs  OptimizedSingleThreadCpuRunner.cs  PLinqPerStepCpuRunner.cs  SingleThreadCpuRunner.cs  StepCpuSyncedRunner.cs  TaskPerCellCpuRunner.cs  TaskPerCellStepCpuRunner.cs  TaskPerCoreCpuRunner.cs  TaskPerCoreStepCpuRunner.cs  WorkItemPerCoreStepCpuRunner.cs
Pozyx.CAE/Pozyx.CAE.Lib.Windows/: AmpUninitializer.cs  Pozyx.CAE.Lib.Windows.csproj  Test.cs  ThreadingTools.cs
Pozyx.CAE/Pozyx.CAE.Lib.Windows/Properties/: AssemblyInfo.cs
Pozyx.CAE/Pozyx.CAE.Lib.Windows/Runners/: CppSingleThreadCpuPackedIntRunner.cs  CppSingleThreadCpuRunner.cs  OptimizedSingleThreadOneCoreCpuRunner.cs  SingleThreadOneCoreCpuRunner.cs  ThreadPerCellStepCpuSyncedGpuPackedRunner.cs  (+5 more)
Pozyx.CAE/Pozyx.CAE.Test/: GCNotification.cs  Pozyx.CAE.Test.csproj  RunnerTest.cs  packages.config
Pozyx.CAE/Pozyx.CAE.TestApp/: Pozyx.CAE.TestApp.csproj  Program.cs
Pozyx.CAE/Pozyx.CAE.Windows8/: Pozyx.CAE.Windows8.csproj  ThreadingTools.cs  packages.config
cuda/: CMakeLists.txt  README.md  build.ps1
cuda/shaders/: render.frag  render.vert
cuda/src/: cache.cpp  cache.h  compute.cpp  compute.h  compute_kernel.cu  config.cpp  config.h  main.cpp  render.cpp  render.h  viewport.h
pkg/: README.md  caelib.d.ts  caelib.js  caelib_bg.wasm  caelib_bg.wasm.d.ts  package.json
shaders/: ca_compute.wgsl  render.wgsl
src/: cache.rs  compute.rs  index.html  lib.rs  main.rs  render.rs  web.rs
src/shaders/: ca_compute.wgsl  render.wgsl
(+22 files in other folders)
